--- a/styles/countdown.css
+++ b/styles/countdown.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Dancing Script', Arial;
+    font-family: Verdana, Arial;
+    background-color: white;
 }
 
 a {
@@ -7,6 +8,10 @@ a {
     right: 0;
     bottom: 0;
     color: #000000;
+}
+
+div {
+    display: block;
 }
 
 #page-container {
@@ -20,7 +25,7 @@ a {
 }
 
 #counter {
-    color: #ff99cc;
+    color: #a80b00;
     font-size: 10rem;
     cursor: pointer;
 }
@@ -39,5 +44,4 @@ a {
 .bottomright {
     bottom: 0;
     right: 0;
-    transform: rotate(90deg);
 }
